src/objects/Procedure_Catalog_Price__c.object
<CustomObject>
    <description>The price that goes with this procedure</description>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>The list for this currency of the Procedure</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Procedure_Catalog__c</fullName>
        <label>Procedure Catalog</label>
        <referenceTo>Procedure_Catalog__c</referenceTo>
        <relationshipLabel>Procedure Catalog Price</relationshipLabel>
        <relationshipName>Procedure_Catalogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Procedure Catalog Price</label>
    <nameField>
        <displayFormat>PCP{000000000}</displayFormat>
        <label>Procedure Catalog Price</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedure Catalog Price</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>